syntax = "proto3";

package Protocol;
// import "google/protobuf/timestamp.proto"; 
option csharp_namespace = "Google.Protobuf.Protocol";

import public "Enum.proto";
import public "Struct.proto";

message S_Connected 
{
}

message C_Test 
{
	int32 v = 1;
}